--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <main class="main">
     <canvas id="canvas"></canvas>
   </main>
-
+  <section class="controlls">
+    <button id="start">Start</button>
+  </section>
   <script src="./js.js"></script>
 </body>
 
